Bug 181998 - scrolling calendar back/forward by one month results in inconsistent views
Summary: scrolling calendar back/forward by one month results in inconsistent views
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: monthview (other bugs)
Version First Reported In: 4.1.4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-26 17:45 UTC by doc.evans
Modified: 2009-03-23 14:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description doc.evans 2009-01-26 17:45:28 UTC
Version:            (using KDE 4.1.4)
OS:                Linux
Installed from:    Ubuntu Packages

The scrolling function when the calendar is set to monthly view moves the calendar backwards and forwards in ways that aren't consistent, so that if one hits (for example) "back one month" and then "forward one month" one does not necessarily end up with the view with which one started.

For example: I just started up the calendar in monthly view, and the first date shown was today (26 January, 2009). I scrolled back one month and then forward one month. The first date shown is now 19 January.

It seems to me that one expects "backward one month" and "forward one month" to be precise opposites. One expects "backwards <any-time-period>" followed by "forward <the-same-time-period>" to be a null operation.
Comment 1 Sergio Martins 2009-03-23 14:40:27 UTC
SVN commit 943136 by smartins:

Always show day one in the first row when navigating. You can still use scroll to show it on other lines.

This fixes:
- inconsistent views while going forward then back again.
- "Go to today" sometimes shows last month, or next month.

BUG: 181998
BUG: 142355
CCBUG: 182075


 M  +4 -1      monthview.cpp  
 M  +2 -5      monthview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=943136