Always show day one in the first row when navigating. You can still use scroll to show it on other lines.

This fixes:
- inconsistent views while going forward then back again.
- "Go to today" sometimes shows last month, or next month.

BUG: 181998
BUG: 142355
CCBUG: 182075

svn path=/trunk/KDE/kdepim/; revision=943136